src/styles/blocks/menu.scss
.menu {
  background-color: $c-bg;
  height: 100vh;
  width: 100vw;

  &__bottom {
    padding-block: 132px;
    @include p-page;
    justify-content: center;
    flex-grow: 1;

    @include onTablet {
      padding-block: 198px;
    }
  }

  &__list {
    @include column;
    align-items: center;
    gap: 1.5rem;

    @include onTablet {
      gap: 3rem;
      font-size: 1.5rem;
    }

    &-link {
      @include nav-link;
    }
  }
}

